# jack-sparse-row

./: lock.txt  notebook.py  notebook.py.json  notebook_copy.py  pyproject.toml
__marimo__/session/: notebook.py.json  notebook_copy.py.json
assets/: experimental-setup-simple.excalidraw  experimental-setup.excalidraw  llm-intro.excalidraw
data/: geo_cities.json  geo_monument_examples.json  geo_monuments.json
